# LindaComm

./: .gitignore  LindaComm.sln  LindaComm.vcxproj  LindaComm.vcxproj.filters  README.md
src/: CMakeLists.txt  main.cpp  tests.h
src/architecture/: Proces.cpp  Proces.h
src/linda/: linda.cpp  linda.h
src/parser/: Element.cpp  Element.h  Parser.cpp  Parser.h  Requirement.h  check_fun.h
src/protocol/: control_data.cpp  control_data.h
src/thread/: SynchronizedQueue.h  Thread.h  monitor.h
src/tuple/: Tuple.cpp  Tuple.h  TupleElement.cpp  TupleElement.h  TupleElementType.h
